--- a/GUI/BookingWindow.xaml
+++ b/GUI/BookingWindow.xaml
@@ -8,7 +8,11 @@
         Title="{Binding Path=Mode, StringFormat=Book {0}}"
         mc:Ignorable="d" Height="800" Width="1200"
         WindowStartupLocation="CenterOwner"
-        Style="{DynamicResource {x:Type Window}}">
+        Style="{DynamicResource {x:Type Window}}"
+        x:Name="ThisWindow">
+    <Window.InputBindings>
+        <KeyBinding Key="Enter" Command="{Binding CmdBook}" CommandParameter="{Binding ElementName=ThisWindow}"/>
+    </Window.InputBindings>
     <Window.Resources>
         <convert:BookingModeToVisibility x:Key="ModeToVis"/>
         <convert:RankToString x:Key="RankToStr"/>
@@ -61,9 +65,10 @@
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" Margin="0,10">
                 <Button Style="{DynamicResource HighlightButton}" 
                         Margin="0,0,10,0" 
-                        Click="Submit">
+                        Command="{Binding CmdBook}"
+                        CommandParameter="{Binding ElementName=ThisWindow}">
                     <TextBlock>
-                        Book <Run Text="{Binding Path=Mode}"/> (End)
+                        Book <Run Text="{Binding Path=Mode}"/> (Enter)
                     </TextBlock>
                 </Button>
                 <Button Margin="0,0,10,0">Cancel</Button>
@@ -87,23 +92,25 @@
                     <StackPanel>
                         <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
                             <Label Content="Drawn out by" VerticalAlignment="Center"/>
-                            <TextBox Text="{Binding Path=SelectedPerson.Name}" IsReadOnly="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                            <TextBox Text="{Binding Path=SelectedPersonBooking.Name}" IsReadOnly="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
                         </DockPanel>
                         <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
                             <Label Content="Booked out at" VerticalAlignment="Center"/>
-                            <TextBox Text="{Binding Path=TimeIssued, StringFormat='d/M/yyyy HH:mm'}" IsReadOnly="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+                            <TextBox Text="{Binding Path=TimeBooked, StringFormat='d/M/yyyy HH:mm'}" IsReadOnly="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
                         </DockPanel>
                         <DockPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="0,0,0,5">
                             <Label Content="Issued by" VerticalAlignment="Center"/>
-                            <ComboBox ItemsSource="{Binding Path=Staff}" SelectedIndex="0"/>
+                            <ComboBox 
+                                ItemsSource="{Binding Path=Staff}" 
+                                SelectedItem="{Binding Path=SelectedStaff}"/>
                         </DockPanel>
                     </StackPanel>
                 </GroupBox>
-                <GroupBox Grid.Column="2" Header="Authorized Personnel">
+                <GroupBox Grid.Column="2" Header="Authorized Personnel" KeyboardNavigation.DirectionalNavigation="None">
                     <ListBox ItemsSource="{Binding AuthorizedPersonnel}"
                              BorderThickness="0"
                              ItemContainerStyle="{StaticResource ItemContainerStyle}"
-                             SelectedValue="{Binding Path=SelectedPerson}">
+                             SelectedValue="{Binding Path=SelectedPersonBooking}">
                     </ListBox>
                 </GroupBox>
             </Grid>
