--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -83,8 +83,11 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <Grid Grid.Row="0" Margin="0,0,0,10">
+            <Grid Grid.Row="0" Grid.ColumnSpan="2" Margin="0,0,0,10">
                 <TextBlock Foreground="{DynamicResource GroupBoxOutlineBrush}" FontSize="30">Keypress Management</TextBlock>
+                <StackPanel HorizontalAlignment="Right">
+                    <Button Click="StartEditWindow">Edit Keypress</Button>
+                </StackPanel>
             </Grid>
             
             <Grid Grid.Row="1">
