--- a/GUI/EditWindow.xaml
+++ b/GUI/EditWindow.xaml
@@ -5,10 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI"
         xmlns:model="clr-namespace:Database.DatabaseModels;assembly=Database"
+        xmlns:convert="clr-namespace:GUI.Converters"
+        xmlns:ViewModels="clr-namespace:GUI.ViewModels"
         mc:Ignorable="d"
         Title="EditWindow" Height="800" Width="1200"
+        x:Name="ThisWindow"
         WindowStartupLocation="CenterOwner"
-        Style="{DynamicResource {x:Type Window}}">
+        Style="{DynamicResource {x:Type Window}}" d:DataContext="{d:DesignInstance {x:Type ViewModels:EditViewModel}}">
     <Window.Resources>
         <Style TargetType="ListBoxItem">
             <Setter Property="FocusVisualStyle" Value="{x:Null}" />
@@ -28,6 +31,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <convert:RankToString x:Key="RankToStr"/>
     </Window.Resources>
     <TabControl Background="{DynamicResource ContentBackgroundBrush}" Padding="0" BorderThickness="0">
         <TabItem Header="Key Lists">
@@ -53,14 +57,23 @@
                                 <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" FontSize="22" Text="{Binding Path=BunchNumber}" Margin="0,0,10,0" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Column="0" FontSize="22" Text="{Binding BunchNumber}" Margin="0,0,10,0" VerticalAlignment="Center"/>
                             <StackPanel Grid.Column="1">
-                                <TextBlock Text="{Binding Path=Name}" TextWrapping="Wrap"/>
-                                <TextBlock>
-                            Number of keys: <TextBlock Text="{Binding Path=NumberOfKeys}"/>
-                        </TextBlock>
+                                <TextBlock Text="{Binding Name}" TextWrapping="Wrap"/>
+                                <TextBlock><Run Text="Number of keys: "/><InlineUIContainer>
+                                        <TextBlock Text="{Binding NumberOfKeys}"/>
+                                    </InlineUIContainer></TextBlock>
                             </StackPanel>
                         </Grid>
+                    </Border>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type model:Person}">
+                    <Border TextElement.Foreground="{DynamicResource NormalTextBrush}" Background="{DynamicResource ContentBackgroundBrush}">
+                        <TextBlock>
+                    <TextBlock Text="{Binding Rank, Converter={StaticResource RankToStr}}"/>
+                    <TextBlock Text="{Binding Name}"/>
+                    <TextBlock Text="{ Binding NRIC, StringFormat=- {0} }"/>
+                </TextBlock>
                     </Border>
                 </DataTemplate>
             </TabItem.Resources>
@@ -70,11 +83,50 @@
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="2*"/>
                     </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
                     <ListBox Grid.Column="0"
                              Margin="0,0,10,0"
-                             ItemsSource="{Binding AllKeyBunches}">
-                    </ListBox>
-                    <Grid Grid.Column="1"/>
+                             ItemsSource="{Binding AllKeyBunches}"
+                             SelectedValue="{Binding SelectedKeyBunch}"/>
+                    <Grid Grid.Column="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Column="0" Grid.Row="0">
+                            <DockPanel Grid.Column="0" Margin="0,0,0,5">
+                                <Label Content="Bunch Number" VerticalAlignment="Center"/>
+                                <TextBox Text="{Binding SelectedKeyBunch.BunchNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            </DockPanel>
+                            <DockPanel Grid.Column="1" Margin="0,0,0,5">
+                                <Label Content="Under key list" VerticalAlignment="Center"/>
+                                <ComboBox/>
+                            </DockPanel>
+                        </StackPanel>
+                        <StackPanel Grid.Column="1" Grid.Row="0">
+                            <DockPanel Grid.Column="1" Margin="0,0,0,5">
+                                <Label Content="Name" VerticalAlignment="Center"/>
+                                <TextBox Text="{Binding SelectedKeyBunch.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            </DockPanel>
+                            <DockPanel Grid.Column="1" Margin="0,0,0,5">
+                                <Label Content="Number of keys" VerticalAlignment="Center"/>
+                                <TextBox Text="{Binding SelectedKeyBunch.NumberOfKeys, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                            </DockPanel>
+                        </StackPanel>
+                        <ListBox Grid.Column="0" Grid.Row="1" ItemsSource="{Binding SelectedKeyBunch.AuthorizedPersonnel}"/>
+                        <ListBox Grid.Column="1" Grid.Row="1" ItemsSource="{Binding SelectedKeyBunch.AuthorizedSquadrons}"/>
+                    </Grid>
+                    <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan="2">
+                        <Button Margin="0,0,10,0" Content="Save" Command="{Binding CmdSaveAndClose}" Background="{DynamicResource HighlightButtonBackgroundBrush}" CommandParameter="{Binding ElementName=ThisWindow}"/>
+                        <Button Margin="0,0,10,0" Content="Cancel"/>
+                    </StackPanel>
                 </Grid>
             </Border>
         </TabItem>
